fixes scrollbar

--- a/Squadpage 1H legends/style.css
+++ b/Squadpage 1H legends/style.css
@@ -1,4 +1,33 @@
-.header{
+::-webkit-scrollbar {
+    width: 0.3cm;
+    height: 0.3cm;
+   }
+   
+  ::-webkit-scrollbar-track {
+    background:rgb(0, 0, 0);
+    border-radius: 20px;
+   }
+   
+  ::-webkit-scrollbar-thumb {
+     background:rgb(0, 195, 255);
+     border-radius: 20px;
+  }
+  .container::-webkit-scrollbar {
+    width: 0.3cm;
+   }
+   
+  .container::-webkit-scrollbar-track {
+    background:rgb(0, 0, 0);
+    border-radius: 20px;
+   }
+   
+  .container::-webkit-scrollbar-thumb {
+     background:rgb(0, 195, 255);
+     border-radius: 20px;
+  }
+
+
+     .header{
 background-color: #00FFFF;
 transition-duration: 2s;
 display: grid;
@@ -23,12 +52,17 @@ body{
 }
 
 .container{
-display: grid;
-grid-template-columns: repeat(30, 100px);
-grid-template-rows: 250px;
-    gap: 8px;
-margin-top: 6em;
-
+    background-color:black;
+    margin-top: 20%;
+     display: grid;
+     grid-template-columns: repeat(30, 130px) ;
+     grid-template-rows: 250px;
+     margin-bottom: 10%;
+     margin-right: 3%;
+     margin-left: 3%;
+     overflow-y: hidden;
+     overflow-x: scroll;
+     border-radius: 50px;
 
 }
 
